--- a/1주차_수업.md
+++ b/1주차_수업.md
@@ -38,7 +38,7 @@
         ```
         ++ 다른 방법  
          파일 탐색기에서 자신이 연결할 프로젝트 폴더로 들어가서 주소창에 명령프롬프트(cmd) 실행.
-         ![image](https://raw.githubusercontent.com/2025-Tutoring-KW/C-Study/refs/heads/main/git_1.png)
+         ![image](https://raw.githubusercontent.com/2025-Tutoring-KW/image/refs/heads/main/git_1.png)
 
 
     2. Git 레포지토리로 초기화합니다. (처음 연결할 때만 씀.)
@@ -47,7 +47,7 @@
         ```
     ## 4. 로컬 레포지토리와 GitHub 레포지토리 연결
     1. GitHub에서 생성한 레포지토리의 URL을 복사한 후, 터미널에서 아래 명령어로 원격 저장소를 추가합니다.
-        ![image](https://raw.githubusercontent.com/2025-Tutoring-KW/C-Study/refs/heads/main/git_2.png)
+        ![image](https://raw.githubusercontent.com/2025-Tutoring-KW/image/refs/heads/main/git_2.png)
         ```bash
         git remote add origin your-repository-address
         ```
@@ -160,8 +160,8 @@
     (알고리즘의 연산 횟수)
     * **빅오(Big-O) 표기법**  
         알고리즘의 연산 횟수에서 상수 계수나 낮은 차수는 무시하고, 가장 빠르게 증가하는 항만 표기하는 방법.
-        ![Big-O](https://raw.githubusercontent.com/2025-Tutoring-KW/C-Study/refs/heads/main/Big-O.jpg)
-        예를 들어 알고리즘의 연산 횟수가 n^2+3n+8+n!일때 이를 Big-O 표기법으로 나타내면  O(n!)이 됨.
+        ![Big-O](https://raw.githubusercontent.com/2025-Tutoring-KW/image/refs/heads/main/Big-O.jpg)  
+        **예를 들어 알고리즘의 연산 횟수가 n^2+3n+8+n!일때 이를 Big-O 표기법으로 나타내면  O(n!)이 됨.**
     
 # 4. 숙제
 방식 정하기.
