--- a/0주차_수업.md
+++ b/0주차_수업.md
@@ -15,12 +15,14 @@ int main(){
   return 0;
 }
 ```
+## 예제 코드 출력 결과
+![출력1](https://raw.githubusercontent.com/2025-Tutoring-KW/image/refs/heads/main/%EC%B6%9C%EB%A0%A51.png)
 # C언어 프로그램 구조
 
-### 1. 표준 라이브러리 헤더 파일.
-### 2. main함수는 프로그램이 실행될 때 가장먼저 호출되는 함수.
-### 3. ;는 문장 구분자임.
-### 4. {}는 코드의 범위를 나타냄.
+#### 1. 표준 라이브러리 헤더 파일.
+#### 2. main함수는 프로그램이 실행될 때 가장먼저 호출되는 함수.
+#### 3. ;는 문장 구분자임.
+#### 4. {}는 코드의 범위를 나타냄.
 
 # C언어 기본 문법
 ## 표준 입출력
@@ -38,3 +40,13 @@ printf("서식");
 scanf("서식", &변수이름);
 ```
 ## 서식
+![서식](https://raw.githubusercontent.com/2025-Tutoring-KW/image/refs/heads/main/%EC%84%9C%EC%8B%9D.png)
+
+## escape character 
+##### \\==￦
+
+![escape character](https://raw.githubusercontent.com/2025-Tutoring-KW/image/refs/heads/main/escape_character.png)
+
+
+
+
