--- a/0주차_수업.md
+++ b/0주차_수업.md
@@ -39,6 +39,8 @@ printf("서식");
 ```C
 scanf("서식", &변수이름);
 ```
+#### &은 변수의 주솟값을 나타내는 기호. (&변수 == 변수의 주소)
+
 ## 서식
 ![서식](https://raw.githubusercontent.com/2025-Tutoring-KW/image/refs/heads/main/%EC%84%9C%EC%8B%9D.png)
 
@@ -46,6 +48,61 @@ scanf("서식", &변수이름);
 ##### \\==￦
 
 ![escape character](https://raw.githubusercontent.com/2025-Tutoring-KW/image/refs/heads/main/escape_character.png)
+
+### 표준 입출력 예제코드
+```c
+#define _CRT_SECURE_NO_WARNINGS
+#include <stdio.h>
+
+int main() {
+
+	int age, ID;
+
+	scanf("%d %d", &age, &ID);
+
+	printf("이석훈의 나이는 %d살, 학번은 %d 입니다.\n", age, ID);
+
+	return 0;
+}
+```
+![출력2](https://raw.githubusercontent.com/2025-Tutoring-KW/image/refs/heads/main/%EC%B6%9C%EB%A0%A52.png)
+![출력3](https://raw.githubusercontent.com/2025-Tutoring-KW/image/refs/heads/main/%EC%B6%9C%EB%A0%A53.png)
+
+## 변수
+#### 1 byte == 8 bit 
+#### bit는 이진법의 한 자릿수를 말함.
+![변수](https://raw.githubusercontent.com/2025-Tutoring-KW/image/refs/heads/main/%EB%B3%80%EC%88%98.png)
+
+## 배열
+#### 변수 타입이 나란히 연결되어 있는 것.
+#### C는 정적 배열 할당을 하기 때문에 크기를 지정해 줘야함.
+
+## 문자열
+#### char 타입으로 되어있는 배열.
+#### 문자열은 일반 정수형 배열과 다르게 마지막 자리에 \0(=NULL)값이 들어가야함.
+#### 일반 변수 배열과 다르게 문자열 끝에 NULL값이 들어가야 하는 이유는 문자열은 strcpy, strcat으로 문자열의 크기가 자유자제로 변할 수 있음.(==가변적이다.)
+#### 따라서 문자열의 끝을 구분하기 위해 문자열에 NULL값을 넣어줘야한다.
+#### 문자 변수 1개를 담을 때는 ''로 묶고 문자열을 담을 때는 ""로 묶는다. 
+#### ex) char a = 'C'; char str[6]="hello";
+### 예제 코드
+```c
+#define _CRT_SECURE_NO_WARNINGS
+#include <stdio.h>
+
+int main() {
+  int arr[10] = {11, 22, 33, 44, 55, 66, 77, 88, 99, 110};
+
+  char name[9]="seokhun";
+  
+  return 0;
+}
+```
+## 조건문
+
+
+
+
+
 
 
 
