--- a/0주차_수업.md
+++ b/0주차_수업.md
@@ -90,20 +90,53 @@ int main() {
 #include <stdio.h>
 
 int main() {
-  int arr[10] = {11, 22, 33, 44, 55, 66, 77, 88, 99, 110};
+	int arr[10] = { 11, 22, 33, 44, 55, 66, 77, 88, 99, 110 };
 
-  char name[9]="seokhun";
-  
-  return 0;
+	char ch;
+
+	char str[11];
+
+	scanf("%c", &ch);
+
+	scanf("%s", str);
+
+	printf("%c %s", ch, str);
+
+	return 0;
 }
 ```
-## 조건문
+## 산술 연산자
+
+| **연산자**   | **설명**              | **예제 (a = 10, b = 3)**        | **결과**             |
+|--------------|-----------------------|---------------------------------|----------------------|
+| `+`          | 덧셈                  | `a + b`                         | `13`                 |
+| `-`          | 뺄셈                  | `a - b`                         | `7`                  |
+| `*`          | 곱셈                  | `a * b`                         | `30`                 |
+| `/`          | 나눗셈 (몫)           | `a / b`                         | `3` (정수 나눗셈)     |
+| `%`          | 나머지                | `a % b`                         | `1`                  |
 
 
+## 대입 연산자
 
+| **연산자**    | **설명**              | **예제 (a = 10)**        | **결과 (a의 값)**           |
+|---------------|-----------------------|---------------------------------|----------------------|
+| `=`           | 대입                  | `a = 5`                         | `5`                  |
+| `+=`          | 더하고 대입           | `a += 3`                        | `13`                  |
+| `-=`          | 빼고 대입             | `a -= 3`                        | `7`                   |
+| `*=`          | 곱하고 대입           | `a *= 2`                        | `20`                  |
+| `/=`          | 나누고 대입           | `a /= 2`                        | `5`                   |
+| `%=`          | 나머지 대입           | `a %= 3`                        | `1`                   |
 
+## 관계 연산자
 
-
+| **연산자**    | **설명**              | **예제 (a = 10, b = 3)**        | **결과 (a의 값)**           |
+|---------------|-----------------------|---------------------------------|----------------------|
+| `==`          | 같음                  | `a == b`                        | `0`                  |
+| `!=`          | 다름                  | `a != b`                        | `1`                  |
+| `>`           | 큼                    | `a > b`                         | `1`                  |
+| `<`           | 작음                  | `a < b`                         | `0`                  |
+| `>=`          | 크거나 같음            | `a >= b`                        | `1`                  |
+| `<=`          | 작거나 같음            | `a <= b`                        | `0`                  |
 
 
 
