--- a/0주차_수업.md
+++ b/0주차_수업.md
@@ -129,7 +129,7 @@ int main() {
 
 ## 관계 연산자
 
-| **연산자**    | **설명**              | **예제 (a = 10, b = 3)**        | **결과 (a의 값)**           |
+| **연산자**    | **설명**              | **예제 (a = 10, b = 3)**        | **결과 (a의 값)**    |
 |---------------|-----------------------|---------------------------------|----------------------|
 | `==`          | 같음                  | `a == b`                        | `0`                  |
 | `!=`          | 다름                  | `a != b`                        | `1`                  |
@@ -138,5 +138,11 @@ int main() {
 | `>=`          | 크거나 같음            | `a >= b`                        | `1`                  |
 | `<=`          | 작거나 같음            | `a <= b`                        | `0`                  |
 
+## 증감 연산자
 
-
+| **연산자**    | **설명**              | **예제 (a = 10)**        | **결과 (a의 값)**            |
+|---------------|-----------------------|---------------------------------|-----------------------|
+| `++a`         | 전위 증가              | `a++`                           | `6`(즉시 증가)        |
+| `a++`         | 후위 증가              | `++a`                           | `5`(나중에 증가)      |
+| `--a`         | 전위 감소              | `--a`                           | `4`(즉시 감소)        |
+| `a--`         | 후위 감소              | `a--`                           | `5`(나중에 감소)      |
