--- a/0주차_수업.md
+++ b/0주차_수업.md
@@ -9,8 +9,11 @@
 #include <stdio.h>
 
 int main(){
+	printf("광운대 튜터링!\n 화이팅!"); //광운대 튜터링 첫수업
 
-  printf("광운대 튜터링!\n 화이팅!");
+	/*
+		주석입니다ㅎㅎ
+	*/
 
   return 0;
 }
@@ -23,6 +26,7 @@ int main(){
 #### 2. main함수는 프로그램이 실행될 때 가장먼저 호출되는 함수.
 #### 3. ;는 문장 구분자임.
 #### 4. {}는 코드의 범위를 나타냄.
+#### 5. //는 한줄 주석이고 /* */는 범위 주석.
 
 # C언어 기본 문법
 ## 표준 입출력
@@ -90,7 +94,7 @@ int main() {
 #include <stdio.h>
 
 int main() {
-	int arr[10] = { 11, 22, 33, 44, 55, 66, 77, 88, 99, 110 };
+	int numArr[10] = { 11, 22, 33, 44, 55, 66, 77, 88, 99, 110 };
 
 	char ch;
 
@@ -105,6 +109,7 @@ int main() {
 	return 0;
 }
 ```
+![배열](https://raw.githubusercontent.com/2025-Tutoring-KW/image/refs/heads/main/%EB%B0%B0%EC%97%B4.png)
 ## 산술 연산자
 
 | **연산자**   | **설명**              | **예제 (a = 10, b = 3)**        | **결과**             |
@@ -142,7 +147,150 @@ int main() {
 
 | **연산자**    | **설명**              | **예제 (a = 10)**        | **결과 (a의 값)**            |
 |---------------|-----------------------|---------------------------------|-----------------------|
-| `++a`         | 전위 증가              | `a++`                           | `6`(즉시 증가)        |
-| `a++`         | 후위 증가              | `++a`                           | `5`(나중에 증가)      |
+| `++a`         | 전위 증가              | `++a`                           | `6`(즉시 증가)        |
+| `a++`         | 후위 증가              | `a++`                           | `5`(나중에 증가)      |
 | `--a`         | 전위 감소              | `--a`                           | `4`(즉시 감소)        |
 | `a--`         | 후위 감소              | `a--`                           | `5`(나중에 감소)      |
+```c
+int num = 5;
+printf("%d", num++);
+```
+```c
+int num = 5;
+printf("%d", --num);
+```
+
+## 논리 연산자
+| **연산자**    | **설명**              | **예제 (a = 1, b = 0)**         | **결과 (a의 값)**     |
+|---------------|-----------------------|---------------------------------|-----------------------|
+| `&&`          | and                   | `a && b`                        | `0`                   |
+| `\|\|`          | or                    | `a \|\| b`                        | `1`                   |
+| `!`           | not                   | `!a`                            | `0`                   |
+
+## 비트 연산자
+| **연산자**   | **설명**              | **예제 (a = 5, b = 3)**        | **결과**              |
+|--------------|-----------------------|---------------------------------|----------------------|
+| `&`          | 덧셈                  | `a & b`                         | `1`                  |
+| `\|`         | 뺄셈                  | `a \| b`                         | `7`                 |
+| `^`          | 곱셈                  | `a ^ b`                         | `6`                  |
+| `~`          | 나눗셈 (몫)           | `~a`                            | 보수                  |
+| `<<`         | 나머지                | `a << 1`                        | `10`                 |
+| `>>`         | 나머지                | `a >> 1`                        | `2`                  |
+
+## 삼항 연산자
+| **연산자**    | **설명**              | **예제 (a = 10, b = 7)**                | **결과 (a의 값)**     |
+|---------------|-----------------------|-----------------------------------------|-----------------------|
+| `?:`          | (조건)?(조건이 참일때 실행할 코드):(거짓일 때 실행할 코드 )         | `(a > b) ? (a-=b): (a+=b)`                        | `3`                   |
+
+![삼항연산자](https://raw.githubusercontent.com/2025-Tutoring-KW/image/refs/heads/main/%EC%82%BC%ED%95%AD%20%EC%97%B0%EC%82%B0%EC%9E%90.png)
+
+## 조건문
+### if문
+```c
+if(조건문){
+	조건문을 만족할때 실행할 코드;
+}
+```
+### else if문
+```c
+if(조건문){
+	if 조건문이 참일 때 실행할 코드;
+}
+else if(조건문){
+	자신 위의 조건문들이 모두 거짓이며, else if 조건문이 참일 때 실행할 코드;
+}
+else if(조건문){
+	자신 위의 조건문들이 모두 거짓이며, else if 조건문이 참일 때 실행할 코드;
+}
+else{
+	if 조건문과 else if 조건문 모두 거짓일 경우 실행할 코드;
+}
+```
+단 if를 else if 혹은 else와 같이 썼을 때 if ,else if 조건문에서 참이라면 그 뒤에 조건문을 확인하지 않고 다음 코드로 넘어감.
+
+### swich문문
+```c
+int grade;
+scanf("%d", &grade);
+switch (grade) {
+case 4:
+    printf("훌륭해요!");
+    break;
+case 3:
+    printf("좋아요!");
+    break;
+case 2:
+    printf("평균이네요!");
+    break;
+case 1:
+    printf("좋지 않아요!");
+    break;
+case 0:
+    printf("좀 더 노력하세요!");
+    break;
+default:
+    printf("잘못된 학점입니다");
+    break;
+}
+```
+ **swich문은 case마다 break;를 꼭 추가해야함. 추가하지 않을 시 case에 만족하는 조건문이 있을 때 아래에 있는 코드들을 모두 실행하며 넘어감.**
+
+##반복문
+### for문
+```c
+for(초기조건(=초기화);조건문;증감){
+	실행할 코드;
+}
+```
+```c
+for(int i=0;i<10;i++){
+	printf("%d번째 실행입니다.\n",i+1);
+}
+```
+### while문
+```c
+while(조건문){
+	실행할 코드;
+}
+```
+```c
+int i=0;
+while(i<10){
+	printf("%d번째 실행입니다.\n",i+1);
+	i++;
+}
+```
+### 무한 반복문
+```c
+for(;;){
+}
+```
+```c
+while(1){
+}
+```
+# 실습 예제
+숫자 맞추기 게임
+
+프로그램은 1 ~ 100까지의 임의의 수를 발생시킨다.  
+사용자는 1~100사이의 값을 반복적으로 입력해서 컴퓨터가 생각한 값을 맞추면 게임이 끝난다.  
+사용자가 값을 입력하면 컴퓨터는 앞에서 생성한 값과 비교해서 결과를 알려준다.  
+사용자가 컴퓨터가 생각한 숫자를 맞추면 게임이 끝나고 몇 번 만에 숫자를 맞췄는지 알려준다. 
+```c
+#define _CRT_SECURE_NO_WARNINGS
+#include <stdio.h>
+#include <stdlib.h>
+#include <time.h>
+
+int main() {
+	srand(time(NULL));
+	int number = rand()%100 + 1;
+	/* Write Your Code */
+
+	return 0;
+}
+```
+
+# 숙제
+### 1. 백준 단계별로 풀어보기 단계 2까지 모든 문제 풀기 총 20문제.
+### 2. 백준 문제 ATM(11399번) 풀기.
