--- a/0주차_수업.md
+++ b/0주차_수업.md
@@ -72,6 +72,17 @@ int main() {
 ![출력2](https://raw.githubusercontent.com/2025-Tutoring-KW/image/refs/heads/main/%EC%B6%9C%EB%A0%A52.png)
 ![출력3](https://raw.githubusercontent.com/2025-Tutoring-KW/image/refs/heads/main/%EC%B6%9C%EB%A0%A53.png)
 
+잘못 설명한 부분: ~정수형 변수를 scanf로 초기화 할 때 알파벳 같은 문자를 넣게되면 그 문자의 아스키 코드가 저장된다.~  
+수정: 정수형 변수를 초기화 할 때는 알파벳을 넣으면 쓰레기 값이 나옴. 꼭 변수 타입과 초기화하려는 변수와 같아야함.
+```c
+int main() {
+    char ch;
+    scanf("%c", &ch);  // 문자 입력 받기
+    printf("%d\n", ch); // 문자 -> 정수(ASCII 코드) 출력
+    return 0;
+}
+```
+단 위에 코드처럼 문자형 변수를 받고 출력할 때 형식지정자를 %c가 아닌 %d로 출력하면 해당 문자의 아스키 코드가 나옴.
 ## 변수
 #### 1 byte == 8 bit 
 #### bit는 이진법의 한 자릿수를 말함.
@@ -164,18 +175,19 @@ printf("%d", --num);
 | **연산자**    | **설명**              | **예제 (a = 1, b = 0)**         | **결과 (a의 값)**     |
 |---------------|-----------------------|---------------------------------|-----------------------|
 | `&&`          | and                   | `a && b`                        | `0`                   |
-| `\|\|`          | or                    | `a \|\| b`                        | `1`                   |
+| `\|\|`       | or                     | `a \|\| b`                      | `1`                   |
 | `!`           | not                   | `!a`                            | `0`                   |
 
 ## 비트 연산자
+숫자를 2진법으로 바꾸고 각 자릿수별로 논리연산을 한다고 생각하면 편함.
 | **연산자**   | **설명**              | **예제 (a = 5, b = 3)**        | **결과**              |
 |--------------|-----------------------|---------------------------------|----------------------|
-| `&`          | 덧셈                  | `a & b`                         | `1`                  |
-| `\|`         | 뺄셈                  | `a \| b`                         | `7`                 |
-| `^`          | 곱셈                  | `a ^ b`                         | `6`                  |
-| `~`          | 나눗셈 (몫)           | `~a`                            | 보수                  |
-| `<<`         | 나머지                | `a << 1`                        | `10`                 |
-| `>>`         | 나머지                | `a >> 1`                        | `2`                  |
+| `&`          | and                   | `a & b`                         | `1`                  |
+| `\|`         | or                    | `a \| b`                        | `7`                  |
+| `^`          | xor                   | `a ^ b`                         | `6`                  |
+| `~`          | not                   | `~a`                            | 보수                 |
+| `<<`         | n번 왼쪽으로 시프트    | `a << 1`                        | `10`                 |
+| `>>`         | n번 오른쪽으로 시프트  | `a >> 1`                        | `2`                  |
 
 ## 삼항 연산자
 | **연산자**    | **설명**              | **예제 (a = 10, b = 7)**                | **결과 (a의 값)**     |
@@ -208,7 +220,7 @@ else{
 ```
 단 if를 else if 혹은 else와 같이 썼을 때 if ,else if 조건문에서 참이라면 그 뒤에 조건문을 확인하지 않고 다음 코드로 넘어감.
 
-### swich문문
+### swich문
 ```c
 int grade;
 scanf("%d", &grade);
@@ -269,9 +281,10 @@ for(;;){
 while(1){
 }
 ```
-# 실습 예제
-숫자 맞추기 게임
 
+
+# 숙제
+### 1.숫자 맞추기 게임
 프로그램은 1 ~ 100까지의 임의의 수를 발생시킨다.  
 사용자는 1~100사이의 값을 반복적으로 입력해서 컴퓨터가 생각한 값을 맞추면 게임이 끝난다.  
 사용자가 값을 입력하면 컴퓨터는 앞에서 생성한 값과 비교해서 결과를 알려준다.  
@@ -291,6 +304,5 @@ int main() {
 }
 ```
 
-# 숙제
-### 1. 백준 단계별로 풀어보기 단계 2까지 모든 문제 풀기 총 20문제.
-### 2. 백준 문제 ATM(11399번) 풀기.
+### 2. 백준 단계별로 풀어보기 단계 2까지 모든 문제 풀기 총 20문제.
+### 3. 백준 문제 ATM(11399번) 풀기.
