--- a/1주차_수업.md
+++ b/1주차_수업.md
@@ -167,7 +167,10 @@
 데이터를 특정 기준에 따라 순서대로(오름차순, 내림차순) 배열하는 것.  
 ## 버블 정렬
 시간복잡도가 O(n²)인 정렬 알고리즘.  
-인접한 두 인덱스를 비교해서 순서가 잘못됐다면 변경.
+인접한 두 인덱스를 비교해서 순서가 잘못됐다면 변경.  
+
+![Image](https://github.com/user-attachments/assets/27c4a1d5-7b6d-4603-981a-a2b4537b1be9)
+![Image](https://github.com/user-attachments/assets/43683cec-b727-4cdb-acf0-20f9a267a778)
 ```c
 #define _CRT_SECURE_NO_WARNINGS
 #include <stdio.h>
