--- a/0주차_수업.md
+++ b/0주차_수업.md
@@ -121,6 +121,55 @@ int main() {
 }
 ```
 ![배열](https://raw.githubusercontent.com/2025-Tutoring-KW/image/refs/heads/main/%EB%B0%B0%EC%97%B4.png)
+
+## 문자열 관련 함수
+문자열 관련 함수를 사용하기 위해서는 string.h 헤더를 추가해야 한다.
+```c
+#include <string.h>
+```
+### strcmp()
+
+```c
+strcmp(문자열1, 문자열2);
+```
+
+두 문자열을 알파벳순으로 비교하는 함수이다.
+
+`strcmp`는 문자들의 아스키 코드 값을 서로 비교하여,
+
+두 문자열이 똑같은 문자열인 경우에는 0을, 
+
+`문자열1 < 문자열2` 인 경우에는 음수를,
+
+`문자열1 > 문자열2` 인 경우에는 양수를 반환한다.
+### strlen()
+
+```c
+strlen(문자열);
+```
+
+문자열의 길이를 반환하는 함수이다.
+
+이 때 반환되는 길이는 문자열의 전체 길이에서 문자열의 맨 끝 `\0`(null)을 제외한 길이이다.
+
+### strcpy()
+
+```c
+strcpy(붙여넣기할 문자열, 복사할 문자열);
+```
+
+기존의 문자열을 새 문자열에 복사/붙여넣기 할 때 쓰이는 함수이다.
+
+단, 붙여넣기할 문자열의 사이즈가 복사할 문자열의 사이즈보다 크거나 같아야만 한다. (작으면 안 된다.)
+### strcat()
+
+```c
+strcat(이어붙여질 문자열, 복사할 문자열);
+```
+
+기존의 문자열을 다른 문자열 뒤에 이어붙일 때 쓰이는 함수이다.
+
+`strcat`를 사용하면 이어붙여질 문자열의 맨 뒤에는 `\0`이 사라지고 그 자리부터 복사할 문자열이 들어가게 된다.
 ## 산술 연산자
 
 | **연산자**   | **설명**              | **예제 (a = 10, b = 3)**        | **결과**             |
