--- a/2주차_수업.md
+++ b/2주차_수업.md
@@ -2,7 +2,184 @@
 ![2차원배열](https://raw.githubusercontent.com/2025-Tutoring-KW/image/refs/heads/main/2%EC%B0%A8%EC%9B%90%EB%B0%B0%EC%97%B4.png)
 배열 안에 배열이 있다고 생각하면 편하다.  
 ex) numArr[0] = {11, 22, 33, 44};
-# 2. 문자열+
+# 2. 함수
+![함수](https://raw.githubusercontent.com/2025-Tutoring-KW/image/refs/heads/main/%ED%95%A8%EC%88%98.jpg)
+```c
+//함수의 선언
+반환타입 함수명(타입 매개변수, ...) { //매개변수는 전달인자가 없는 경우 쓰지 않음
+		/*
+		함수 실행문
+		*/
+		return 반환값; //함수 타입이 void인 경우엔 return값이 없기에 쓰지 않음
+}
+
+int main(){
+		//함수의 사용
+		//함수 타입이 void일 경우, 함수명(전달인자, ...);로만 써도 됨.
+		타입 값을받는변수 = 함수명(전달인자, ...);
+		
+		return 0;
+}
+```
+### **반환값이 없으면 반환타입을 ```void```로 쓰고 return;를 해줌.
+### 함수 이용 전
+```c
+#include <stdio.h>
+
+int main() {
+    int arr[5];
+    printf("5개의 정수를 입력하세요: ");
+    for (int i = 0; i < 5; i++) {
+        scanf("%d", &arr[i]);
+    }
+
+    // 평균 구하기
+    int sum = 0;
+    for (int i = 0; i < 5; i++) {
+        sum += arr[i];
+    }
+    double avg = (double)sum / 5;
+
+    // 최댓값 구하기
+    int max = arr[0];
+    for (int i = 1; i < 5; i++) {
+        if (arr[i] > max) {
+            max = arr[i];
+        }
+    }
+
+    // 최솟값 구하기
+    int min = arr[0];
+    for (int i = 1; i < 5; i++) {
+        if (arr[i] < min) {
+            min = arr[i];
+        }
+    }
+
+    printf("평균: %.2f\n", avg);
+    printf("최댓값: %d\n", max);
+    printf("최솟값: %d\n", min);
+
+    return 0;
+}
+```
+### 함수 이용
+```c
+#include <stdio.h>
+
+double getAverage(int arr[5], int size);
+int getMax(int arr[5], int size);
+int getMin(int arr[5], int size);
+
+int main() {
+    int arr[5];
+
+    printf("5개의 정수를 입력하세요: ");
+    for (int i = 0; i < 5; i++) {
+        scanf("%d", &arr[i]);
+    }
+
+    printf("평균: %.2f\n", getAverage(arr, 5));
+    printf("최댓값: %d\n", getMax(arr, 5));
+    printf("최솟값: %d\n", getMin(arr, 5));
+
+    return 0;
+}
+
+// 평균 구하는 함수
+double getAverage(int arr[5], int size) {
+    int sum = 0;
+    for (int i = 0; i < size; i++) {
+        sum += arr[i];
+    }
+    return (double)sum / size;
+}
+
+// 최댓값 구하는 함수
+int getMax(int arr[5], int size) {
+    int max = arr[0];
+    for (int i = 1; i < size; i++) {
+        if (arr[i] > max) {
+            max = arr[i];
+        }
+    }
+    return max;
+}
+
+// 최솟값 구하는 함수
+int getMin(int arr[5], int size) {
+    int min = arr[0];
+    for (int i = 1; i < size; i++) {
+        if (arr[i] < min) {
+            min = arr[i];
+        }
+    }
+    return min;
+}
+
+```
+## 1. 지역변수와 전역변수
+
+- **지역 변수(local variable)**
+중괄호 내부, 함수의 매개변수(파라미터)에서 사용되는 변수.
+지역 변수의 지역은 함수의 내부, 중괄호 내부를 의미함.
+같은 함수 안에서만 접근이 가능하며, 함수를 벗어나면 값이 사라진다.
+지역 변수는 초기화하지 않으면 컴파일 에러가 나거나 쓰레기 값이 저장된다(메모리 공간이 소멸).
+- **전역 변수 (global variable)**
+중괄호 외부에 선언되는 변수.
+어느 함수에서든 접근이 가능하고, 프로그램이 종료되기 전까지 값이 사라지지 않는다(메모리 공간 소멸X).
+전처리 지시문 밑에 선언해야 하고, 초깃값을 지정하지 않고 선언하면 0으로 자동 초기화됨.
+모든 곳에서 접근할 수 있기 때문에 보안성이 떨어진다.
+- **정적 변수 (static variable)**
+전역 변수처럼 프로그램이 종료되기 전까지 값이 사라지지 않는 변수이다.
+1회만 초기화가 가능한게 특징이며, 선언 시 초기화하지 않으면 0으로 자동 초기화가 되고,
+전역 변수에 비해 접근 범위가 좁기 때문에 안정적이다.
+
+|  | 지역 변수 | 전역 변수 | 정적 변수 |
+| --- | --- | --- | --- |
+| 메모리 생성 시점 | 중괄호 내부 | 프로그램 시작 | 프로그램 시작 |
+| 메모리 소멸 시점 | 중괄호를 벗어날 때 | 프로그램 종료 | 프로그램 종료 |
+| 디폴트 초깃값 | 쓰레기 값 | 0 | 0 |
+| 사용 범위 | 중괄호 내부 | 프로그램 전체 | 정적 지역 변수:중괄호 내부,  정적 전역 변수:  선언된 소스 파일 |
+
+### 예제
+```c
+#include <stdio.h>
+
+// 전역 변수 (프로그램 실행 동안 유지됨)
+int globalVar = 10;
+
+void func() {
+    // 정적 변수 (한 번만 초기화되며 함수가 끝나도 값이 유지됨)
+    static int staticVar = 0;
+    
+    // 지역 변수 (함수 내에서만 사용 가능, 함수가 종료되면 메모리에서 사라짐)
+    int localVar = 5;
+    
+    printf("globalVar: %d, staticVar: %d, localVar: %d\n", globalVar, staticVar, localVar);
+    
+    // 변수 값 변경
+    globalVar++;
+    staticVar++;
+    localVar++;
+}
+
+int main() {
+    printf("첫 번째 함수 호출:\n");
+    func();
+    
+    printf("\n두 번째 함수 호출:\n");
+    func();
+    
+    printf("\n세 번째 함수 호출:\n");
+    func();
+    
+    return 0;
+}
+
+```
+### 출력 결과
+![출력5](https://raw.githubusercontent.com/2025-Tutoring-KW/image/refs/heads/main/%EC%B6%9C%EB%A0%A55.PNG)
 # 3. 포인터
 ## 1.메모리와 주소
 ![정수형 메모리](https://raw.githubusercontent.com/2025-Tutoring-KW/image/refs/heads/main/%EC%A0%95%EC%88%98%EB%A9%94%EB%AA%A8%EB%A6%AC.png)
@@ -22,6 +199,44 @@ char* p = &ch;
 
 ```
 ![포인터1](https://raw.githubusercontent.com/2025-Tutoring-KW/image/refs/heads/main/%ED%8F%AC%EC%9D%B8%ED%84%B01.PNG)
+### 역참조
+포인터에 들어간 주솟값에 들어가 있는 값을 가져오는 것을 역참조라고 함.  
+역참조 방법: 앞에 *를 붙힘.
+### 예제 코드
+```c
+char ch = 'A';
+char* p = &ch;
+printf("%c\n", ch);
+printf("%p\n", &ch);
+printf("%p\n", &p);
+printf("%c\n", *p);
+```
+### 출력 결과
+![출력6](https://raw.githubusercontent.com/2025-Tutoring-KW/image/refs/heads/main/%EC%B6%9C%EB%A0%A56.PNG)
 
+### 배열과 포인터
+```c
+int arr[9] = {11, 22, 33, 44, 55, 66, 77, 88, 99};
+```
+### arr[3] == *(arr+3)
+### 2차원 배열일때
+```c
+int main() {
+    int arr[3][3] = { {1,2,3},{4,5,6},{7,8,9} };
+    printf("%d", *(*(arr + 1)+2));
+    return 0;
+}
+```
+## 포인터를 쓰는 이유
+call by reference를 이용하려고.
 
+# 실습예제 1번
+![실습예제1](https://raw.githubusercontent.com/2025-Tutoring-KW/image/refs/heads/main/%EC%8B%A4%EC%8A%B5%EC%98%88%EC%A0%9C2_1.PNG)
+
+# 실습예제 2번
+![실습예제2](https://raw.githubusercontent.com/2025-Tutoring-KW/image/refs/heads/main/%EC%8B%A4%EC%8A%B5%EC%98%88%EC%A0%9C2_2.PNG)
+
+# 숙제
+1. 못푼 실습예제들.
+2. 카톡방에 올라온 실습예제 전부.
 
