--- a/6주차_수업.md
+++ b/6주차_수업.md
@@ -34,7 +34,7 @@ int main(void) {
  
     // .(점)으로 구조체 멤버에 접근하여 값 할당
     student1.number = 21012345;
-    strcpy(student1.name, "김세종");
+    strcpy(student1.name, "이기현현");
     strcpy(student1.major, "컴퓨터공학과");
     student1.grade = 3.5;
  
@@ -63,17 +63,7 @@ typedef struct 구조체이름 {
  
 typedef struct{
     int number;
-    char name[20];
-    char major[20];
-    double grade;
-}Student;
- 
-int main(void) {
-    Student student1;
- 
-    // .(점)으로 구조체 멤버에 접근하여 값 할당
-    student1.number = 21012345;
-    strcpy(student1.name, "김세종");
+ 현");
     strcpy(student1.major, "컴퓨터공학과");
     student1.grade = 3.5;
  
