--- a/6주차_수업.md
+++ b/6주차_수업.md
@@ -27,10 +27,10 @@ struct student{
     char name[20];
     char major[20];
     double grade;
-};
+}Student;
  
 int main(void) {
-    struct student student1;
+    Student student1;
  
     // .(점)으로 구조체 멤버에 접근하여 값 할당
     student1.number = 21012345;
