--- a/6주차_수업.md
+++ b/6주차_수업.md
@@ -27,14 +27,14 @@ struct student{
     char name[20];
     char major[20];
     double grade;
-}Student;
+};
  
 int main(void) {
-    Student student1;
+    struct student student1;
  
     // .(점)으로 구조체 멤버에 접근하여 값 할당
     student1.number = 21012345;
-    strcpy(student1.name, "이기현현");
+    strcpy(student1.name, "이기현");
     strcpy(student1.major, "컴퓨터공학과");
     student1.grade = 3.5;
  
@@ -49,11 +49,15 @@ int main(void) {
 ```
 ## 구조체 변수를 선언할때마다 struct를 치기 귀찮을 때.
 ```c
-typedef struct 구조체이름 {
+typedef struct 구조체이름1 {  //typedef쓰면 굳이 뒤에 구조체이름1 안써도 됨.
     멤버변수1자료형 멤버변수1이름;
     멤버변수2자료형 멤버변수2이름;
     ...
-}구조체이름;
+}구조체이름2;
+
+
+구조체이름2 구조체변수이름; //typedef 구조체 선언방법
+
 ```
 
 ## typedef 예제
@@ -61,9 +65,18 @@ typedef struct 구조체이름 {
 #include <stdio.h>
 #include <string.h>
  
-typedef struct{
+typedef struct {  
     int number;
- 현");
+    char name[20];
+    char major[20];
+    double grade;
+}Student;
+int main(void) {
+    Student student1;
+ 
+    // .(점)으로 구조체 멤버에 접근하여 값 할당
+    student1.number = 21012345;
+    strcpy(student1.name, "이기현");
     strcpy(student1.major, "컴퓨터공학과");
     student1.grade = 3.5;
  
@@ -112,7 +125,7 @@ char str[101];
 
 int main() {
 
-    char *str=(char*)malloc(sizeof(char)*6);
+    char *str=(char*)malloc(sizeof(char)*6);  //문자형 변수 크기만큼(1byte) 6개를 할당 >> 6칸짜리 문자열
 
     strcpy(str,"hello");
 
@@ -128,7 +141,7 @@ int main() {
 
 int main() {
 
-    int *arr=(int*)calloc(5, sizeof(int));
+    int *arr=(int*)calloc(5, sizeof(int));  //정수형 변수 크기만큼(4byte) 5개를 할당 >> 5칸 정수 배열을 만듦.
     
     for (int i = 0; i < 5; i++) {
         printf("%d\n", arr[i]);
@@ -150,11 +163,14 @@ int main() {
         printf("%d\n", arr[i]);
     }
 
-    arr = (int*)realloc(arr, sizeof(int)*7);
+    arr = (int*)realloc(arr, sizeof(int)*7);   //5칸으로 할당받은 배열을 2칸 늘려서 7칸짜리 배열로 재할당.
 
     free(arr); // 사용 종료 시 free 필수!
 }
 ```
+
+##### realloc은 칸을 늘릴 때는 상관 없는데 칸을 줄일 때는 조심해야함. 칸을 줄일 때는 뒤부터 삭제가 됨. realloc으로 칸 수를 줄이고 나서는 삭제된 칸은 free된 판정. 당연히 그쪽 메모리로 접근하면 안됨.
+
 
 ## 2차원 배열 동적할당 방법
 ```c
