--- a/7주차_수업.md
+++ b/7주차_수업.md
@@ -140,4 +140,6 @@ int main(void)
 }
 ```
 ![파일출력1](https://raw.githubusercontent.com/2025-Tutoring-KW/image/refs/heads/main/%ED%8C%8C%EC%9D%BC%EC%B6%9C%EB%A0%A51.png)
-
+# 실습
+![단어오름차순1](https://raw.githubusercontent.com/2025-Tutoring-KW/image/refs/heads/main/%EB%8B%A8%EC%96%B4%EC%98%A4%EB%A6%84%EC%B0%A8%EC%88%9C1.png)
+![단어오름차순2](https://raw.githubusercontent.com/2025-Tutoring-KW/image/refs/heads/main/%EB%8B%A8%EC%96%B4%EC%98%A4%EB%A6%84%EC%B0%A8%EC%88%9C2.png)
