--- a/7주차_수업.md
+++ b/7주차_수업.md
@@ -88,7 +88,42 @@ int main(void)
     return 0;
 }
 ```
+3. ****fgetc****
+```c
+int fgetc(FILE *)
+      //입력한 문자, 오류나 파일에 데이터가 없을 때 EOF
+```
+```c
+#include <stdio.h>
+ 
+int main(void)
+{
+    FILE * fp = fopen("sejong.txt", "r");
+ 
+    char ch;
+ 
+    if (fp == NULL)
+    {
+        printf("파일 열기 실패\n");
+        return 1;
+    }
+ 
+    while (1)    // 무한 반복
+    {
+        ch = fgetc(fp);    // 개방한 파일로부터 한 문자 입력
+        if (ch == EOF)    // 반환값이 EOF면
+            break;    // 반복 종료
+        putchar(ch);    // 읽어들인 문자를 화면에 출력
+    }
+ 
+    fclose(fp);
+ 
+    return 0;
+}
+```
+
 # 모드 w(write)일 때 쓸 수 있는 파일 입출력 함수들
+모드가 w면 원래 파일에 있던 내용은 삭제되고 새로 쓰는 내용들이 적힘.
 1. ****fprintf****
 ```c
 int fprintf(FILE *, const char *, ...);
@@ -141,5 +176,9 @@ int main(void)
 ```
 ![파일출력1](https://raw.githubusercontent.com/2025-Tutoring-KW/image/refs/heads/main/%ED%8C%8C%EC%9D%BC%EC%B6%9C%EB%A0%A51.png)
 # 실습
+## 1. 파일 내용 세로로 저장하기
+****text.txt****파일에서 내용을 읽어오고 그 내용을 세로로 저장하기.(파일 안에 내용은 마음대로 정할 것.)
+## 2. 단어 오름차순, 내림차순 정리
+   
 ![단어오름차순1](https://raw.githubusercontent.com/2025-Tutoring-KW/image/refs/heads/main/%EB%8B%A8%EC%96%B4%EC%98%A4%EB%A6%84%EC%B0%A8%EC%88%9C1.png)
 ![단어오름차순2](https://raw.githubusercontent.com/2025-Tutoring-KW/image/refs/heads/main/%EB%8B%A8%EC%96%B4%EC%98%A4%EB%A6%84%EC%B0%A8%EC%88%9C2.png)
