--- a/7주차_테스트.md
+++ b/7주차_테스트.md
@@ -6,10 +6,12 @@
 
 2. initialize(): 사용자에게 단어를 입력받음.(동적할당 사용)  
 
-3. sort(): 입력받은 단어들을 사전순으로 정렬.(대소문자구분x)  
+3. sort(): 입력받은 단어들을 사전순으로 정렬.
 
 4. end(): 사전 순으로 정렬된 단어들을 출력.(동적할당 해제)
 
-5. **중복되는 단어는 1번만 출력해야한다.**  
+5. my_strcmp(): 대소문자 구분 안하는 strcmp().
 
-6. 제한시간 30분.
+6. **중복되는 단어는 1번만 출력해야한다.**  
+
+7. 제한시간 30분.
