--- a/8주차_수업.md
+++ b/8주차_수업.md
@@ -252,6 +252,7 @@ void print(List* list) {
 
 # 연결리스트를 사용하는 이유
 엄청난 자유도 (원하는 구조를 만들 수 있음)  
+![연결리스트_활용](https://raw.githubusercontent.com/2025-Tutoring-KW/image/refs/heads/main/%EC%97%B0%EA%B2%B0%EB%A6%AC%EC%8A%A4%ED%8A%B8_%ED%99%9C%EC%9A%A9.png)
 ****삽입과 삭제 위치가 고정되어있는 자료구조에서 매우 강력**** ex) 스택(Stack), 큐(Queque) 등등  
 
 # 배열로 자료구조를 구현하기 유리할 때.
