--- a/8주차_수업.md
+++ b/8주차_수업.md
@@ -95,7 +95,7 @@ typedef struct {
 
 **트라이 (Trie)**
 
-## 연결리스트 코드
+## 연결리스트 코드(지향하는 코드)
 ![연결리스트](https://raw.githubusercontent.com/2025-Tutoring-KW/image/refs/heads/main/%EC%97%B0%EA%B2%B0%EB%A6%AC%EC%8A%A4%ED%8A%B8.png)
 
 ```c
@@ -226,6 +226,9 @@ void print(List* list) {
     }
 }
 ```
+## 연결리스트 코드(지양하는 코드: 이우신식)
+### 고급C자료 12주차 코드는 버러지 코드입니다. 그러나 고급C 기말고사 시험에서 연결리스트 부분이 나오면 우신식으로 써야합니다.
+
 # 연결리스트와 배열의 장단점
 ✅ **배열 (Array)**  
 📌 장점  	  
@@ -261,10 +264,12 @@ void print(List* list) {
 
 
 # 실습예제
-## 1. 양방향 연결리스트 구현  
+## 1. 연결리스트 삭제 방식 바꾸기
+위에 코드에서 값을 입력받아 리스트 맨 뒤에 삽입하는 방식을 인덱스를 입력받아 그 인덱스에 삽입하는 방식으로 바꿔보기.
+## 2. 양방향 연결리스트 구현  
 ![양방향_연결리스트](https://raw.githubusercontent.com/2025-Tutoring-KW/image/refs/heads/main/%EC%96%91%EB%B0%A9%ED%96%A5_%EC%97%B0%EA%B2%B0%EB%A6%AC%EC%8A%A4%ED%8A%B8.png)
 
-## 2. 백준 10828, 10845 (스택, 큐 구현 문제)
+## 3. 백준 10828, 10845 (스택, 큐 구현 문제)
 
 
 ## 백준 문제 답지
