--- a/8주차_수업.md
+++ b/8주차_수업.md
@@ -230,7 +230,7 @@ void print(List* list) {
 ### 고급C자료 12주차 코드는 버러지 코드입니다. 그러나 고급C 기말고사 시험에서 연결리스트 부분이 나오면 우신식으로 써야합니다.
 
 # 연결리스트와 배열의 장단점
-✅ **배열 (Array)**  
+ **배열 (Array)**  
 📌 장점  	  
 ✅ 빠른 접근 속도	인덱스로 접근 가능 → arr[0], arr[5] 등 O(1)  
 ✅ 메모리 사용 효율적	연속된 메모리 공간에 저장되므로 캐시 친화적  
@@ -241,7 +241,7 @@ void print(List* list) {
 ❌ 중간 삽입/삭제 느림	요소를 한 칸씩 밀거나 당겨야 함 → O(n)  
 ❌ 메모리 낭비 가능	사용하지 않는 공간이 생기거나, 초과할 수도 있음  
 
-✅ **연결리스트 (Linked List)**    
+ **연결리스트 (Linked List)**    
 📌 장점  	  
 ✅ 크기 제한 없음	필요할 때마다 동적으로 노드를 추가/삭제 가능  
 ✅ 삽입/삭제가 빠름	앞이나 중간에서 노드를 추가/삭제할 때 O(1) 가능 (포인터만 조정)  
